[gd_scene load_steps=8 format=3 uid="uid://c7fq6l2ad7uuq"]

[ext_resource type="Texture2D" uid="uid://bx608q6dmm31d" path="res://graphics/ui/bullet.png" id="1_3tv4j"]
[ext_resource type="Script" path="res://scenes/UI/hud.gd" id="1_yluxa"]
[ext_resource type="Theme" uid="uid://dd8vydii08pr8" path="res://scenes/UI/main_theme.tres" id="2_cwyqa"]
[ext_resource type="Texture2D" uid="uid://qvpnvhxqdj5t" path="res://graphics/ui/grenade.png" id="2_rspnj"]
[ext_resource type="Texture2D" uid="uid://dwof2f4bkyjx4" path="res://graphics/ui/progress_bar/bg.png" id="4_trish"]
[ext_resource type="Texture2D" uid="uid://baxw5t5di14il" path="res://graphics/ui/progress_bar/over.png" id="5_d22ft"]
[ext_resource type="Texture2D" uid="uid://dx6lo3lexl1ie" path="res://graphics/ui/progress_bar/progress.png" id="6_ltlpb"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_yluxa")

[node name="AmmoGrenadeCounterContainer" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_top = 0.931
anchor_right = 0.036
anchor_bottom = 1.0
offset_left = 15.0
offset_top = -0.320068
offset_bottom = -15.0
grow_vertical = 0

[node name="AmmoCounterContainer" type="HBoxContainer" parent="AmmoGrenadeCounterContainer"]
layout_mode = 2

[node name="AmmoIcon" type="TextureRect" parent="AmmoGrenadeCounterContainer/AmmoCounterContainer"]
layout_mode = 2
texture = ExtResource("1_3tv4j")
expand_mode = 2

[node name="AmmoCount" type="Label" parent="AmmoGrenadeCounterContainer/AmmoCounterContainer"]
layout_mode = 2
theme = ExtResource("2_cwyqa")
text = "20"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GrenadeCounterContainer" type="HBoxContainer" parent="AmmoGrenadeCounterContainer"]
layout_mode = 2

[node name="GrenadeIcon" type="TextureRect" parent="AmmoGrenadeCounterContainer/GrenadeCounterContainer"]
layout_mode = 2
texture = ExtResource("2_rspnj")
expand_mode = 2

[node name="GrenadeCount" type="Label" parent="AmmoGrenadeCounterContainer/GrenadeCounterContainer"]
layout_mode = 2
theme = ExtResource("2_cwyqa")
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
anchors_preset = -1
offset_left = 10.0
offset_top = 10.0
offset_right = 40.0
offset_bottom = 40.0
value = 50.0
rounded = true
texture_under = ExtResource("4_trish")
texture_over = ExtResource("5_d22ft")
texture_progress = ExtResource("6_ltlpb")
